--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "next": "15.2.4",
     "postcss": "^8.5.3",
