--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,10 @@ sqlalchemy==2.0.40
 psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 pydantic==2.11.2
+numpy
+pandas
+scikit-learn
+requests
+matplotlib
+seaborn
+datetime
